# notes_sync

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt
notes_sync/: __init__.py  __main__.py
notes_sync/broker/: __init__.py  connection.py
notes_sync/clients/api/models/: __init__.py  body_auth_api_v1_oauth_2_auth_post.py  broker_not_responding.py  config_get_response.py  config_get_response_config.py  config_logsequence_enable.py  config_put_request.py  empty_ok_response.py  error_code.py  generic_success_response_items.py  generic_success_response_items_items_item.py  message_post_request.py  (+4 more)
notes_sync/clients/native/: __main__.py
notes_sync/config/: __init__.py  default.py  get_settings.py
notes_sync/consumers/health_check/: __main__.py
notes_sync/consumers/logsequence/: __main__.py
notes_sync/database/: alembic.ini
notes_sync/database/alembic/: env.py
notes_sync/database/connection/: __init__.py  session.py
notes_sync/database/models/: __init__.py  config.py  user.py
notes_sync/dependencies/: __init__.py  auth.py  basic_auth.py
notes_sync/endpoints/: __init__.py  config.py  health_check.py  messages.py  oauth2.py
notes_sync/logger/: __init__.py  config.py  logger.py
notes_sync/schemas/: __init__.py  config.py  generic_response.py  health_check.py  messages.py  signup.py
notes_sync/utils/: __init__.py  auth.py  get_settings.py  row2dict.py
scripts/export_openapi/: __main__.py
tests/: conftest.py  utils.py
tests/test_migrations/: test_stairway.py
(+19 files in other folders)
